--- a/stylesproject.css
+++ b/stylesproject.css
@@ -66,7 +66,9 @@ p {
 
 .navbar svg {
   padding: 0 10px;
-  margin: 0 10px;
+  margin-right: 10px;
+  margin-top: 5px;
+  height: 25px;
 }
 
 .container {
